# mqtt-artisan-bridge

./: .gitignore  Cargo.toml  README.md  setup.sh
config/: bridge.json
scripts/: setup-virtual-ports.sh  simulate-esp32.sh  test-bridge.sh
src/: main.rs
