[package]
name = "mqtt-artisan-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Coffee Roaster <roaster@example.com>"]
description = "MQTT to Artisan bridge for ESP32 coffee roaster control"
license = "MIT"
repository = "https://github.com/yourusername/mqtt-artisan-bridge"
keywords = ["mqtt", "artisan", "coffee", "roaster", "esp32"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio-serial = "5.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
crossbeam-channel = "0.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
